# NavaClaw

./: .dockerignore  .env.production.example  .eslintrc.json  .gitignore  COMPLETE_INTERVIEW_INTELLIGENCE_SUMMARY.md  Dockerfile  Dockerfile.frontend  Dockerfile.training  LICENSE  MCP-SERVER-README.md  MCP_INTEGRATION_README.md  README.md  SETUP_GUIDE.md  adaptive_framework_router.py  advanced_crawler_orchestrator.py  advanced_data_locator.py  advanced_intelligence_gathering.py  ai_engine.py  autonomous_data_processor.py  autonomous_self_healing_guard.py  autonomous_value_assessor.py  cleanup_and_consolidate.py  comprehensive_osint_extraction.py  config.json  config.py  convert_recordings_to_hdf5.py  create_devin_repo.py  demo_universal_crawler.py  deploy.sh  devin_ai_crawler.py  devin_repository_generator.py  docker-compose.yml  dynamic_context_optimizer.py  enhanced_osint_extraction.py  error_server.py  figma-integration.js  frontend_clean_code_agent.py  gen_icons.py  hybrid_storage_manager.py  install.sh  (+44 more)
my-crawler-py/: ADVANCED_CRAWLER.md  AUTHENTICATED_CRAWLING.md  BRIGHT_DATA_CAPABILITIES.md  COMPREHENSIVE_TEST_SUMMARY.md  DISTRIBUTED_CRAWLER_SETUP.md  Dockerfile  ENTERPRISE_README.md  OFFLINE_CRAWLER_README.md  README.md  aggregate_results.py  api_server.py  authenticated_crawler_cli.py  batch_processor.py  config.py  crawl_report.csv  crawl_report.json  crawl_results.json  custom_career_extractor.py  deep_viralstyle_crawl.py  distributed_api_server.py  distributed_crawler_cli.py  enhanced_framework_detector.py  enterprise_crawler.py  enterprise_crawler_example.py  (+18 more)
(+190 files in other folders)
