[tool.poetry]
name = "my-crawler-py"
version = "0.0.1"
description = "Advanced distributed web crawler with Python backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_crawler_py"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
tabulate = "^0.9.0"
PyYAML = "^6.0"
scikit-learn = "^1.3.0"
schedule = "^1.2.0"
cryptography = "^41.0.0"
langchain = "^0.3.26"
langchain-openai = "^0.3.28"
langchain-community = "^0.3.27"
openai = "^1.96.0"
chromadb = "^1.0.15"
aiohttp = "^3.12.14"
beautifulsoup4 = "^4.13.4"
gitpython = "^3.1.44"
toml = "^0.10.2"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.0.0"
aiofiles = "^23.0.0"
python-multipart = "^0.0.6"
playwright = "^1.40.0"
requests = "^2.31.0"
urllib3 = "^2.0.0"
SQLAlchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
rq = "^1.15.0"
Pillow = "^10.0.0"
pytesseract = "^0.3.10"
lxml = "^4.9.0"
cssselect = "^1.2.0"
psutil = "^5.9.0"
asyncio-throttle = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
